Allow running tests manually (#150)
* Allow running tests manually

* Downgrade macos version, so the test can setup python

* exclude macos14 and python 3.9

* add info about supported platforms in README.md

* Update .github/workflows/python-test.yml

Co-authored-by: Hugo van Kemenade <1324225+hugovk@users.noreply.github.com>

* fix README.md

* fix README.md

---------

Co-authored-by: Hugo van Kemenade <1324225+hugovk@users.noreply.github.com>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,6 +1,8 @@
 name: Tests & checks
 
-on: [pull_request]
+on:
+  pull_request:
+  workflow_dispatch: # allow running manually from the Actions tab
 
 # cancel previous runs on a new commit
 concurrency:
@@ -14,6 +16,12 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [macos-latest, ubuntu-latest, windows-latest]
+        exclude:
+          - python-version: "3.9"
+            os: macos-latest
+        include:
+          - python-version: "3.9"
+            os: macos-13
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
