Change RDKit version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "*"
+rdkit = "<2023.9.6"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
