--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,8 @@
 [tool.poetry]
 name = "scikit-fingerprints"
-version = "1.4.1"
+version = "1.5.0"
 description = "Library for effective molecular fingerprints calculation"
-authors = [
-    "Scikit-Fingerprints Development Team <scikitfingerprints@gmail.com>",
-    "Jakub Adamczyk <jakub.adamczyk10@gmail.com>",
-    "Przemyslaw Kukla <przemek.kukla0703@gmail.com>",
-    "Piotr Ludynia <piotrztych@gmail.com>",
-    "Michal Szafarczyk <adammichal657@gmail.com>",
-]
+authors = ["Scikit-Fingerprints Development Team <scikitfingerprints@gmail.com>"]
 repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
 documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
 keywords = ["molecular fingerprints", "molecular descriptors", "cheminformatics"]
