--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,8 +56,22 @@ repos:
       - id: pyupgrade
         args: [ "--py39-plus" ]
 
-  - repo: https://github.com/yunojuno/pre-commit-xenon
-    rev: v0.1
+  # we use local Xenon instead of pre-commit hook, because:
+  # - it seems to have bugs related to "ignore" and "exclude" options
+  # - we need separate configs for main library and skfp, since tests have higher
+  #   complexity, many moderately long functions mess up cyclomatic complexity
+  - repo: local
     hooks:
-      - id: xenon
-        args: [ "--max-average=B", "--max-modules=B", "--max-absolute=C" ]
+      - id: xenon_skfp
+        name: xenon_skfp
+        entry: poetry run xenon skfp --max-average=A --max-modules=A --max-absolute=C
+        language: system
+        pass_filenames: false
+
+  - repo: local
+    hooks:
+      - id: xenon_tests
+        name: xenon_tests
+        entry: poetry run xenon tests --max-average=B --max-modules=C --max-absolute=C
+        language: system
+        pass_filenames: false
