--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ python = "^3.9"
 
 datasketch = "*"
 e3fp = "*"
+huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
@@ -60,6 +61,7 @@ mypy = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
+xenon = "*"
 
 [tool.poetry.group.test]
 optional = true
@@ -68,6 +70,7 @@ optional = true
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
+xenon = "*"
 
 [tool.poetry.group.doc]
 optional = true
