Add more checks to tests

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,4 +7,6 @@ allow_redefinition = true
 
 # unfortunately, most libraries that we use are not properly typed
 # in particular, RDKit is unlikely to ever have proper Python typing stubs
+ignore_missing_imports = true
 disable_error_code = import-untyped
+no_site_packages = true
