--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "<2023.9.6"
+rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
