--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -53,4 +53,4 @@ jobs:
         run: poetry run pre-commit run --all-files
 
       - name: Run tests with pytest
-        run: poetry run pytest tests
+        run: poetry run make test
