use binaries from poetry env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ xenon = "*"
 optional = true
 
 [tool.poetry.group.test.dependencies]
+black = "*"
+isort = "*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
