--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "<2023.9.6"
+rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
@@ -67,6 +67,8 @@ xenon = "*"
 optional = true
 
 [tool.poetry.group.test.dependencies]
+black = "*"
+isort = "*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
