--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,7 +2,7 @@ name: Publish Python package to PyPI
 
 on:
   release:
-    types: [published]
+    types: [ published ]
 
 permissions:
   contents: read
@@ -11,20 +11,38 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
+      - name: Update version
+        run: |
+          OLD_VERSION=$(grep ^version pyproject.toml | cut -d '"' -f 2)
+          OLD_VERSION="\"$OLD_VERSION\""
+          NEW_VERSION="${{ github.event.release.tag_name }}"
+          NEW_VERSION="\"${NEW_VERSION:1}\""  # remove "v" prefix
+          echo $NEW_VERSION
+          sed -i "s/version = ${OLD_VERSION}/version = $NEW_VERSION/g" pyproject.toml
 
-    - name: Install Poetry
-      uses: abatilo/actions-poetry@v3
+      - name: Commit & push changes
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git commit -a -m "Update version number to ${NEW_VERSION}"
+          git push
 
-    - name: Configure Poetry for PyPI
-      run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
 
-    - name: Build and publish to PyPI
-      run: >-
-        poetry build
-        && poetry publish
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v3
+
+      - name: Configure Poetry for PyPI
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Build and publish to PyPI
+        run: >-
+          poetry build
+          && poetry publish
