--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scikit-fingerprints"
-version = "0.0.0"   # currently poetry version is set by poetry-version-plugin from tag
+version = "0.0.0"   # version is read with poetry-version-plugin on GitHub release from Git tag
 description = "Library for effective molecular fingerprints calculation"
 authors = ["Scikit-Fingerprints Development Team <scikitfingerprints@gmail.com>"]
 repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
