--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,7 +2,7 @@ name: Publish Python package to PyPI
 
 on:
   release:
-    types: [published]
+    types: [ published ]
 
 permissions:
   contents: read
@@ -11,20 +11,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
 
-    - name: Install Poetry
-      uses: abatilo/actions-poetry@v3
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v3
 
-    - name: Configure Poetry for PyPI
-      run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+      - name: Install Poetry plugins
+        run: poetry self add poetry-version-plugin
 
-    - name: Build and publish to PyPI
-      run: >-
-        poetry build
-        && poetry publish
+      - name: Configure Poetry for PyPI
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Build and publish to PyPI
+        run: >-
+          poetry build
+          && poetry publish
