--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "*"
+rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
