Add RDKit 2D descriptors fingerprint (#216)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,14 @@ readme = "README.md"
 python = "^3.9"
 
 datasketch = "*"
+descriptastorus = "*"
 e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "*"
+rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
