--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,10 @@ repos:
         # turn off assert errors for tests
         exclude: ^tests/
         args:
-          - -s
+          - --skip
           - B101
+          - --skip
+          - B311
 
   - repo: https://github.com/psf/black
     rev: 24.4.2
@@ -56,7 +58,7 @@ repos:
     hooks:
       - id: xenon_skfp
         name: xenon_skfp
-        entry: poetry run xenon skfp --max-average=A --max-modules=A --max-absolute=C
+        entry: poetry run xenon skfp --max-average=B --max-modules=B --max-absolute=C
         language: system
         pass_filenames: false
 
