Add AUROC with constant value handling

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,9 @@
 # minimal supported Python version
 python_version = 3.9
 
+# check all functions, this fixes some tests
+check_untyped_defs = true
+
 # allow redefining variable types, we do that a lot for efficiency
 allow_redefinition = true
 
