Change docs-building hook to run only on release, to avoid publishing irrelevant docs before new version is available

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -1,12 +1,8 @@
 name: Deploy content to Pages
 
 on:
-  push:
-    branches: [ "master" ]
-    paths:
-      - 'docs/**'
-      - 'skfp/**'
-      - '.github/workflows/build-and-publish-docs.yml'
+  release:
+    types: [ published ]
 
   # allow running manually from the Actions tab
   workflow_dispatch:
