--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
+matplotlib = "^3.9.2"
 
 [tool.poetry.group.dev]
 optional = true
