--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
+numba = "^0.60.0"
 numpy = "^1.20.0"
 pandas = "*"
 rdkit = "<=2024.3.3"
