Adjusted numba verison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
-numba = "*"
+numba = ">=0.48.0"
 numpy = "^1.20.0"
 pandas = "*"
 rdkit = "<=2024.3.3"
