--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -73,4 +73,4 @@ jobs:
         run: poetry install --with doc
 
       - name: Build documentation
-        run: poetry run make docs
+        run: poetry run make doctest
