--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ mordredcommunity = "*"
 numba = ">=0.48.0"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "<=2024.3.3"
+rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
