--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,10 @@ e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
-numba = ">=0.48.0"
+numba = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "<=2024.3.3"
+rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
