--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ mordredcommunity = "*"
 numba = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "*"
+rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
