--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,11 +42,12 @@ descriptastorus = "*"
 e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
+llvmlite = "*"
 mordredcommunity = "*"
 numba = "*"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "<=2024.3.3"
+rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
