Try to fix macOS dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,11 @@ descriptastorus = "*"
 e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
-llvmlite = "*"
 mordredcommunity = "*"
-numba = "*"
+numba = ">=0.48.0"
 numpy = "^1.20.0"
 pandas = "*"
-rdkit = "*"
+rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
