--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ descriptastorus = "*"
 e3fp = "*"
 huggingface_hub = "*"
 joblib = "*"
+llvmlite = "^0.43.0"
 mordredcommunity = "*"
 numba = ">=0.48.0"
 numpy = "^1.20.0"
