--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -26,6 +26,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: KyleMayes/install-llvm-action@v2
+        name: Install LLVM and Clang
+        with:
+          version: "14"
+
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
