--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   ci:
     strategy:
-      fail-fast: true
+      # fail-fast: true
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -25,11 +25,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-
-      - uses: KyleMayes/install-llvm-action@v2
-        name: Install LLVM and Clang
-        with:
-          version: "14"
 
       - uses: actions/setup-python@v4
         with:
