Github Actions fix

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,12 +14,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
       - name: Install poetry
-        run: pipx install poetry
+        run: pipx install poetry --python python3.9
 
       - name: Install Poetry plugins
         run: poetry self add poetry-version-plugin
