--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -28,12 +28,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
       - name: Install poetry
-        run: pipx install poetry
+        run: pipx install poetry --python python3.9
 
       - name: Install the project dependencies
         run: poetry install --with doc
