Upgrade loading molecules from SMILES and InChI (#313)
Co-authored-by: j-adamczyk <jakub.adamczyk@placewise.com>

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -29,12 +29,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
+        run: pipx install poetry --python python3.9
 
       - name: Install the project dependencies
         run: poetry install --with doc
