--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.9
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.9
 
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
+        run: pipx install poetry --python python3.9
 
       - name: Install Poetry plugins
         run: poetry self add poetry-version-plugin
