--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -43,7 +43,7 @@ jobs:
         name: Define a venv cache
         with:
           path: ./.venv
-          key: ${{ runner.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ matrix.os }}-venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install the project dependencies
         run: poetry install --with test
