Update E3FP and dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 
 datasketch = "*"
 descriptastorus = "*"
@@ -44,9 +44,9 @@ huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
 numba = ">=0.48.0"
-numpy = "^1.20.0"
+numpy = ">=1.20.0"
 pandas = "*"
-rdkit = "<=2024.3.3"
+rdkit = "<=2024.3.6"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
