Try to fix MacOS tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,9 @@ huggingface_hub = "*"
 joblib = "*"
 mordredcommunity = "*"
 numba = ">=0.48.0"
-numpy = ">=1.20.0"
+numpy = ">=1.20.0,<2"
 pandas = "*"
-rdkit = "<=2024.3.6"
+rdkit = "<=2024.3.3"
 scikit-learn = "*"
 scipy = "*"
 tqdm = "*"
