Pin major library versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,19 +37,19 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 
-datasketch = "*"
-descriptastorus = "*"
-e3fp = "*"
-huggingface_hub = "*"
-joblib = "*"
-mordredcommunity = "*"
-numba = ">=0.48.0"
+datasketch = "1.*"
+descriptastorus = "2.*"
+e3fp = "1.*"
+huggingface_hub = "0.*"
+joblib = "1.*"
+mordredcommunity = "2.*"
+numba = ">=0.48.0,<1"
 numpy = ">=1.20.0,<2"
-pandas = "*"
+pandas = "<3"
 rdkit = "<=2024.3.3"
-scikit-learn = "*"
-scipy = "*"
-tqdm = "*"
+scikit-learn = "1.*"
+scipy = "1.*"
+tqdm = "4.*"
 
 [tool.poetry.group.dev]
 optional = true
