--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 packages = [
     { include = "skfp" }
 ]
+readme = "README.md"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Information Technology",
@@ -27,12 +28,8 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-
-readme = "README.md"
-
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"
-
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
@@ -59,6 +56,7 @@ black = "*"
 coverage = "*"
 flake8 = "*"
 isort = "*"
+jupyter = "*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
