--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -72,7 +72,7 @@ jobs:
         run: poetry install --with doc
 
       - name: Install Pandoc
-      - uses: r-lib/actions/setup-pandoc@v2
+        uses: r-lib/actions/setup-pandoc@v2
 
       - name: Build documentation
         run: poetry run make doctest
