--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install the project dependencies
         run: poetry install --with doc
 
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
       - name: Build documentation
         run: poetry run make docs
 
