--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
-[tool.poetry]
+[project]
 name = "scikit-fingerprints"
 version = "0.0.0"   # version is read with poetry-version-plugin on GitHub release from Git tag
 description = "Library for effective molecular fingerprints calculation"
-authors = ["Scikit-Fingerprints Development Team <scikitfingerprints@gmail.com>"]
+authors = [
+    { name = "Scikit-Fingerprints Development Team", email = "scikitfingerprints@gmail.com" }
+]
 repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
 documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
 keywords = ["molecular fingerprints", "molecular descriptors", "cheminformatics"]
@@ -27,26 +29,26 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Typing :: Typed",
 ]
+requires-python = ">=3.9,<3.13"
 
-[tool.poetry.urls]
+dependencies = [
+    "datasketch>=1.0.0",
+    "descriptastorus>=2.0.0",
+    "e3fp>=1.0.0",
+    "huggingface_hub>=0.0.0",
+    "joblib>=1.0.0",
+    "mordredcommunity>=2.0.0",
+    "numba>=0.48.0,<1",
+    "numpy>=1.20.0,<2",
+    "pandas<3",
+    "rdkit<=2024.3.3",
+    "scikit-learn>=1.0.0",
+    "scipy>=1.0.0",
+    "tqdm>=4.0.0",
+]
+
+[project.urls]
 "Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-
-datasketch = "1.*"
-descriptastorus = "2.*"
-e3fp = "1.*"
-huggingface_hub = "0.*"
-joblib = "1.*"
-mordredcommunity = "2.*"
-numba = ">=0.48.0,<1"
-numpy = ">=1.20.0,<2"
-pandas = "<3"
-rdkit = "<=2024.3.3"
-scikit-learn = "1.*"
-scipy = "1.*"
-tqdm = "4.*"
 
 [tool.poetry.group.dev]
 optional = true
