--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ lightgbm = "*"
 matplotlib = "*"
 ogb = "*"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 [tool.poetry-version-plugin]
 source = "git-tag"
 
