--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -69,10 +69,10 @@ jobs:
           python-version: 3.9
 
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
+        run: pipx install poetry --python python3.9
 
       - name: Install the project dependencies
-        run: poetry sync --with doc
+        run: poetry sync --with docs
 
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
