--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,13 +56,12 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 black = "*"
 coverage = "*"
-flake8 = "*"
-isort = "*"
 jupyter = "*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
+ruff = "*"
 setuptools = "*"  # to avoid PyCharm errors
 xenon = "*"
 
@@ -71,11 +70,11 @@ optional = true
 
 [tool.poetry.group.test.dependencies]
 black = "*"
-isort = "*"
 mypy = "*"
 pip-audit = "*"
 pre-commit = "*"
 pytest = "*"
+ruff = "*"
 xenon = "*"
 
 [tool.poetry.group.doc]
@@ -104,13 +103,6 @@ source = "git-tag"
 
 [tool.pytest.ini_options]
 python_files = "*.py"
-
-[tool.black]
-include = "benchmarking/.*\\.py|skfp/.*\\.py|tests/.*\\.py"
-
-[tool.isort]
-profile = "black"
-skip_glob = ".poetry/**"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
