Further ruff reformatting and fixing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: v0.9.2
     hooks:
       - id: ruff  # linter
-        args: [ --config, ruff.toml]
+        args: [ --fix, --config, ruff.toml]
       - id: ruff-format  # formatter
         args: [ --config, ruff.toml ]
 
